# mumulib

./: .gitignore  LICENSE  Makefile  README.md  domino-shim.js  esbuild.js  index.html  package-lock.json  package.json  requirements.txt  run-tests.sh  tsconfig.json  untitled.html
.devcontainer/: devcontainer.json
.github/workflows/: publish.yaml
examples/: use_state.ts
examples/pattern_and_slot_test/: index.html  test_example.ts
examples/use_dialog/: dialog_example.ts  index.html
examples/use_patslot/: index.html  index.ts  patslot_example.ts
examples/use_patslot_fill/: fill_example.ts  index.html
examples/use_patslot_nested/: index.html  nested_example.ts
examples/use_patslot_pattern_and_slot_node/: index.html  pattern_and_slot_node_example.ts
examples/use_patslot_template/: index.html  template.html  template_example.ts
examples/use_state/: index.html  state_example.ts
examples/use_state_input/: index.html  (+1 more)
python/: consumers.py  consumers_test.py  pyproject.toml  requirements.txt  server.py  setup.py  stacked.py
python/mumulib/: consumers.py  consumers.pyi  consumers_test.py  consumers_test.pyi  mumutypes.py  mumutypes.pyi  mumutypes_test.py  mumutypes_test.pyi  producers.py  producers.pyi  producers_test.py  producers_test.pyi  server.py  server.pyi  server_test.py  server_test.pyi  shaped.py  shaped.pyi  shaped_test.py  shaped_test.pyi  tags.py  tags.pyi  templates.html
src/: dialog.ts  index.html  index.ts  patslot.js  patslot.ts  state.ts  test.ts
tests/: mumulib-dialog.spec.ts  mumulib-patslot.spec.ts  mumulib-state.spec.ts
(+8 files in other folders)
