[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "mumulib"
version = "1.0.16"
authors = [
  { name="Donovan Preston", email="46048+fzzzy@users.noreply.github.com" },
]
description = "There is no library, squared"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "lxml>=5.3.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}

[project.optional-dependencies]
dev = [
    "coverage>=7.6.9",
]

[project.urls]
Homepage = "https://github.com/fzzzy/mumulib"
Issues = "https://github.com/fzzzy/mumulib/issues"
